--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-full-screen": "^1.1.1",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
@@ -48,5 +49,5 @@
   "devDependencies": {
     "@iconify/react": "^4.1.0"
   },
-  "proxy": "http://localhost:3333"
+  "proxy":"http://localhost:3333"
 }
